...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.209" />

    <ImageView
        android:id="@+id/userSettingsImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/image_tool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <TextView
        android:id="@+id/textHomeUsernameView"
        android:layout_width="128dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:textColor="#FFF"
...
