...
    <string name="all_tasks">ALL TASKS</string>
    <string name="add_task_title">Add Task</string>
    <string name="remove_tasks">Remove Tasks</string>
    <string name="all_tasks_title">All Tasks</string>
    <string name="username">Username:</string>
    <string name="user_settings">User Settings</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="all_tasks_two">All Tasks</string>
    <string name="all_task_image">all_task_image</string>
    <string name="state">State</string>
    <string name="add_task_two">Add Task</string>
    <string name="add_task">ADD TASK</string>
...
